minor changes in headers.

--- a/application/clients/desktop/src/app/navigation/header/header.component.html
+++ b/application/clients/desktop/src/app/navigation/header/header.component.html
@@ -30,7 +30,7 @@
         <button type="button" class="btn btn-danger dropdown-toggle btn-design"
           data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
-          select Language
+          Select Language
         </button>
         <div class="dropdown-menu">
           <option *ngFor="let lang of languages" (click)='changeLanguage(lang)'>{{
@@ -43,7 +43,7 @@
       </div>
       <div>
         <button class="btn btn-secondary" *ngIf="!hideElement"
-          (click)="Logout()" type="button">LogOut</button>
+          (click)="Logout()" type="button">Logout</button>
       </div>
     </ul>
   </div>
@@ -104,7 +104,7 @@
               <button type="button" class="btn btn-danger dropdown-toggle btn-design"
                 data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
-                select Language
+                Select Language
               </button>
               <div class="dropdown-menu">
                 <option *ngFor="let lang of languages" (click)='changeLanguage(lang)'>{{
@@ -117,7 +117,7 @@
             </div>
             <div>
               <button class="btn btn-secondary" *ngIf="!hideElement"
-                (click)="Logout()" type="button">LogOut</button>
+                (click)="Logout()" type="button">Logout</button>
             </div>
       <!-- <a href="#">Clients</a>
       <a href="#">Contact</a> -->
