--- a/application/clients/desktop/src/app/project-component/project-component.component.html
+++ b/application/clients/desktop/src/app/project-component/project-component.component.html
@@ -2,7 +2,7 @@
     <br />
     <h1 style="text-align: center;">Project Components</h1>
     <div class='code'>
-        <button class="btn btn-primary float-right btn_color" color="primary" (click)="generateCode()">code
+        <button class="btn btn-primary float-right btn_color" color="primary" (click)="generateCode()">Code
             Generate</button>
     </div>
     <br />
