--- a/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
+++ b/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
@@ -90,8 +90,13 @@
         <h3>Choose an Event</h3>
       </div>
       <div class="modal-body">
-
         <div class="container">
+            <div class="row" *ngIf="selectedFlowObj && selectedFlowObj.length > 0">
+                <div class="col-md-6 col-sm-8 col-xs-6">
+                  <b>Seleted Flow Action</b>: &nbsp;&nbsp; {{selectedFlowObj[0].actionOnData}}
+                </div>
+                <br>
+                </div>
           <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham"
             [columnDefs]="columnDefs" [rowSelection]="rowSelection" [rowData]="rowData" [animateRows]="true"
             [defaultColDef]="defaultColDef" domLayout='autoHeight' [pagination]="true" [paginationPageSize]="10"
