Language change fix and menu fix

--- a/application/clients/desktop/src/app/navigation/header/header.component.html
+++ b/application/clients/desktop/src/app/navigation/header/header.component.html
@@ -33,7 +33,7 @@
           Select Language
         </button>
         <div class="dropdown-menu">
-          <option *ngFor="let lang of languages" (click)='changeLanguage(lang)'>{{
+          <option *ngFor="let lang of languages" (click)='confirmLangModel(lang)'>{{
             '_languages.' + lang |
             i18nextCap }}</option>
         </div>
@@ -107,7 +107,7 @@
                 Select Language
               </button>
               <div class="dropdown-menu">
-                <option *ngFor="let lang of languages" (click)='changeLanguage(lang)'>{{
+                <option *ngFor="let lang of languages" (click)='confirmLangModel(lang)'>{{
                   '_languages.' + lang |
                   i18nextCap }}</option>
               </div>
@@ -132,5 +132,24 @@
         <span style="font-size:30px;cursor:pointer" (click)='openNav()'>&#9776;</span>
       </div>
     </div>
+  </div>
+</div>
+
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'top': '100px','display': confirmLangChangeModal}">
+  <div class="modal-dialog modal-sm" role="dialog">
+    <div class="modal-content">
+      <!-- <div class="modal-header">
+        <h6 class="modal-title">Delete</h6>
+        <button type="button" class="close">&times;</button>
+      </div> -->
+      <div class="modal-body">
+        <p>language change cause you to re-login</p>
+      </div>
+      <div class="modal-footer" style="padding: 5px">
+        <button type="button" (click)="confirmLangChange()" class="btn btn-default">Confirm</button>
+        <button type="button" (click)="onCloseHandled()" class="btn btn-default">{{ 'cancel' | i18next }}</button>
+      </div>
+    </div>
+
   </div>
 </div>
