--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -204,7 +204,7 @@
         <p>Please click confirm to delete this project ? </p>
       </div>
       <div class="modal-footer" style="padding: 5px">
-        <button type="button" (click)="deleteMyProjects(proj)" class="btn btn-default">Confirm</button>
+        <button type="button" (click)="deleteMyProjects()" class="btn btn-default">Confirm</button>
         <button type="button" (click)="onCloseHandled()" class="btn btn-default">{{ 'cancel' | i18next }}</button>
       </div>
     </div>
