--- a/application/clients/desktop/src/app/user/profilesettings/profilesettings.component.html
+++ b/application/clients/desktop/src/app/user/profilesettings/profilesettings.component.html
@@ -40,7 +40,7 @@
       </select>
     </div>
     <div style="float: right">
-      <button type="submit" class="btn btn-primary" (click)="Updateuser(Userobject)">Save</button>&nbsp;&nbsp;
+      <button type="submit" class="btn btn-primary" (click)="Updateuser()">Save</button>&nbsp;&nbsp;
       <button type="submit" class="btn btn-primary" (click)="cancle()">cancel</button>
     </div>
 
