--- a/application/clients/desktop/src/app/component-flows/component-flows.component.html
+++ b/application/clients/desktop/src/app/component-flows/component-flows.component.html
@@ -11,17 +11,18 @@
     <div class="row-button">
       <button mat-raised-button color="primary" (click)="openAddFlowModal('create')">{{ 'create' | i18next }}</button>
       <button mat-raised-button (click)="openAddFlowModal('update')">{{ 'update' | i18next }}</button>
-      <button mat-raised-button color="warn" (click)="deleteRowComponent()">{{ 'delete' | i18next }}</button>
+      <button mat-raised-button color="warn">{{ 'delete' | i18next }}</button>
     </div>
   </div>
- <!-- modified start -->
+  <!-- modified start -->
   <div class="flowTable">
-    <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef" domLayout='autoHeight'
-      (rowSelected)="selectFlowComponent()" [animateRows]="true" class="ag-theme-balham" [columnDefs]="flowComponentColDef"
-      [rowData]="flowComponentRowData" [rowSelection]="rowSelection" (gridReady)="onFCGridReady($event)">
+    <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
+      domLayout='autoHeight' (rowSelected)="selectFlowComponent()" [animateRows]="true" class="ag-theme-balham"
+      [columnDefs]="flowComponentColDef" [rowData]="flowComponentRowData" [rowSelection]="rowSelection"
+      (gridReady)="onFCGridReady($event)">
     </ag-grid-angular>
   </div>
- <!-- modified end -->
+  <!-- modified end -->
   <h1 class="flowTable" style="text-align: center;" *ngIf="default_connector">
     <u>Connector</u> </h1>
   <div class="row" *ngIf="default_connector">
@@ -36,9 +37,10 @@
 
 
   <div class="flowTable" *ngIf="default_connector">
-    <ag-grid-angular #agGrid3 style=" width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef" domLayout='autoHeight'
-      (rowSelected)="selectDefaultConnector()" [animateRows]="true" class="ag-theme-balham" [columnDefs]="linkedConnectorColDef"
-      [rowData]="default_connector" [rowSelection]="rowSelection" (gridReady)="onDCGridReady($event)">
+    <ag-grid-angular #agGrid3 style=" width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
+      domLayout='autoHeight' (rowSelected)="selectDefaultConnector()" [animateRows]="true" class="ag-theme-balham"
+      [columnDefs]="linkedConnectorColDef" [rowData]="default_connector" [rowSelection]="rowSelection"
+      (gridReady)="onDCGridReady($event)">
     </ag-grid-angular>
   </div>
 
@@ -53,13 +55,14 @@
         <button mat-raised-button color="warn" (click)="deleteMicroFlow()">{{ 'delete' | i18next }}</button>
       </div>
     </div>
-     <!-- modified start -->
+    <!-- modified start -->
     <div class="flowTable" *ngIf="microFlowRowData.length > 0">
-      <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef" domLayout='autoHeight'
-        (selectionChanged)="onSelectionMFChange()" [rowSelection]="rowSelection" [animateRows]="true" class="ag-theme-balham"
-        [columnDefs]="microFlowColDef" [rowData]="microFlowRowData" (gridReady)="onGridMicroFlowReady($event)"></ag-grid-angular>
+      <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
+        domLayout='autoHeight' (selectionChanged)="onSelectionMFChange()" [rowSelection]="rowSelection"
+        [animateRows]="true" class="ag-theme-balham" [columnDefs]="microFlowColDef" [rowData]="microFlowRowData"
+        (gridReady)="onGridMicroFlowReady($event)"></ag-grid-angular>
     </div>
-     <!-- modified end -->
+    <!-- modified end -->
   </div>
 </div>
 
@@ -72,13 +75,10 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="component_name">{{'componentName' | i18next}}</label>
-                <input type="text" class="form-control" placeholder="enter Dev Framework" hidden id="_id" [(ngModel)]="dconnector._id"
-                  formControlName="_id">
+                <input type="text" class="form-control" placeholder="enter Dev Framework" hidden id="_id"
+                  [(ngModel)]="dconnector.id" formControlName="_id">
                 <input type="text" class="form-control" placeholder="Enter component name" id="component_name"
-                  formControlName="component_name" [(ngModel)]="iFlowComponent.component_name" [ngClass]="{ 'is-invalid': submitted && form_control.component_name.errors }">
-                <div *ngIf="submitted && form_control.component_name.errors" class="invalid-feedback">
-                  <div *ngIf="form_control.component_name.errors.required">{{'require_name' | i18next}}</div>
-                </div>
+                  formControlName="component_name" [(ngModel)]="iFlowComponent.component_name">
               </div>
             </div>
 
@@ -86,10 +86,7 @@
               <div class="form-group">
                 <label for="label">{{'label'| i18next}}</label>
                 <input type="text" class="form-control" placeholder="{{'placeholder_label' | i18next}}" id="label"
-                  formControlName="label" [(ngModel)]="iFlowComponent.label" [ngClass]="{ 'is-invalid': submitted && form_control.label.errors }">
-                <div *ngIf="submitted && form_control.label.errors" class="invalid-feedback">
-                  <div *ngIf="form_control.label.errors.required">{{'require_label' | i18next}}</div>
-                </div>
+                  formControlName="label" [(ngModel)]="iFlowComponent.label">
               </div>
             </div>
           </div>
@@ -98,21 +95,15 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="type">{{'type'| i18next}}</label>
-                <input class="form-control" id="type" placeholder="Enter Type" formControlName="type" [(ngModel)]="iFlowComponent.type"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.type.errors }">
-                <div *ngIf="submitted && form_control.type.errors" class="invalid-feedback">
-                  <div *ngIf="form_control.type.errors.required">{{'require_description' | i18next}}</div>
-                </div>
+                <input class="form-control" id="type" placeholder="Enter Type" formControlName="type"
+                  [(ngModel)]="iFlowComponent.type">
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
                 <label for="sequence_id">{{'sequenceId'| i18next}}</label>
-                <input type="number" class="form-control" placeholder="Enter Sequence Id" id="sequence_id" [(ngModel)]="iFlowComponent.sequence_id"
-                  formControlName="sequence_id" [ngClass]="{ 'is-invalid': submitted && form_control.sequence_id.errors }">
-                <div *ngIf="submitted && form_control.sequence_id.errors" class="invalid-feedback">
-                  <div *ngIf="form_control.sequence_id.errors.required">should not be empty</div>
-                </div>
+                <input type="number" class="form-control" placeholder="Enter Sequence Id" id="sequence_id"
+                  [(ngModel)]="iFlowComponent.sequence_id" formControlName="sequence_id">
               </div>
             </div>
           </div>
@@ -120,21 +111,15 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="dev_language">{{'devLang'| i18next}}</label>
-                <input class="form-control" id="dev_language" placeholder="Enter Dev Language" formControlName="dev_language"
-                  [(ngModel)]="iFlowComponent.dev_language" [ngClass]="{ 'is-invalid': submitted && form_control.dev_language.errors }">
-                <div *ngIf="submitted && form_control.dev_language.errors" class="invalid-feedback">
-                  <div *ngIf="form_control.dev_language.errors.required">{{'require_description' | i18next}}</div>
-                </div>
+                <input class="form-control" id="dev_language" placeholder="Enter Dev Language"
+                  formControlName="dev_language" [(ngModel)]="iFlowComponent.dev_language">
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
                 <label for="dev_framework">{{'devFramework'| i18next}}</label>
                 <input type="text" class="form-control" placeholder="enter Dev Framework" id="dev_framework"
-                  [(ngModel)]="iFlowComponent.dev_framework" formControlName="dev_framework" [ngClass]="{ 'is-invalid': submitted && form_control.dev_framework.errors }">
-                <div *ngIf="submitted && form_control.dev_framework.errors" class="invalid-feedback">
-                  <div *ngIf="form_control.dev_framework.errors.required">should not be empty</div>
-                </div>
+                  [(ngModel)]="iFlowComponent.dev_framework" formControlName="dev_framework">
               </div>
             </div>
           </div>
@@ -142,19 +127,18 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="description">{{ 'description' | i18next }}</label>
-                <textarea class="form-control" rows="1" id="description" placeholder="{{'placeholder_description' | i18next}}"
-                  formControlName="description" [(ngModel)]="iFlowComponent.description" [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }"></textarea>
-                <div *ngIf="submitted && form_control.description.errors" class="invalid-feedback">
-                  <div *ngIf="form_control.description.errors.required">{{'require_description' | i18next}}</div>
-                </div>
+                <textarea class="form-control" rows="1" id="description"
+                  placeholder="{{'placeholder_description' | i18next}}" formControlName="description"
+                  [(ngModel)]="iFlowComponent.description"></textarea>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
                 <div class="form-check">
                   <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" formControlName="connector" [checked]="iFlowComponent.connector"
-                      [(ngModel)]="iFlowComponent.connector" value="">{{'connector'|i18next}}</label>
+                    <input type="checkbox" class="form-check-input" formControlName="connector"
+                      [checked]="iFlowComponent.connector" [(ngModel)]="iFlowComponent.connector"
+                      value="">{{'connector'|i18next}}</label>
                 </div>
               </div>
             </div>
@@ -163,12 +147,15 @@
       </div>
       <div class="modal-footer">
         <div class="form-group" *ngIf="isDisableFlowComp">
-          <button type="button" class="btn button-create" (click)="createFlowComponent()">{{ 'create' | i18next }}</button>
+          <button type="button" class="btn button-create"
+            (click)="createFlowComponent()">{{ 'create' | i18next }}</button>
           <button type="button" class="btn button-close" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
         </div>
         <div class="form-group" *ngIf="!isDisableFlowComp">
-          <button type="button" class="btn button-create" (click)="updateFlowCompModel()">{{ 'update' | i18next }}</button>
-          <button type="button" class="btn button-close" (click)="onCloseHandledUpdate()">{{ 'cancel' | i18next }}</button>
+          <button type="button" class="btn button-create"
+            (click)="updateFlowCompModel()">{{ 'update' | i18next }}</button>
+          <button type="button" class="btn button-close"
+            (click)="onCloseHandledUpdate()">{{ 'cancel' | i18next }}</button>
         </div>
       </div>
     </div>
@@ -208,33 +195,39 @@
                 <option *ngFor="let avaMethod of selectedAvaConnector.properties" [ngValue]="avaMethod">
                   {{avaMethod.key}}</option>
               </select>
-              <input type="text" *ngIf="selectedAvaConnectorProp" class="form-control" placeholder="enter {{selectedAvaConnectorProp.key}} value"
-                id="description" [(ngModel)]="selectedAvaConnectorProp.value" name="description" [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }">
+              <input type="text" *ngIf="selectedAvaConnectorProp" class="form-control"
+                placeholder="enter {{selectedAvaConnectorProp.key}} value" id="description"
+                [(ngModel)]="selectedAvaConnectorProp.value" name="description">
             </div>
             <div class="form-group" *ngIf="selectedAvaConnector">
               <label for="sel1">Select Methods/APIs:</label>
-              <select class="form-control" [(ngModel)]="selectedAvaConnectorMethod" (change)="onSelectAvaConnectorMethod()">
+              <select class="form-control" [(ngModel)]="selectedAvaConnectorMethod"
+                (change)="onSelectAvaConnectorMethod()">
                 <option *ngFor="let avaMethod of selectedAvaConnector.available_apis" [ngValue]="avaMethod">
                   {{avaMethod.name}} {{avaMethod.description}}</option>
               </select>
             </div>
             <div class="form-group" *ngIf="selectedAvaConnectorMethod">
               <label for="sel1">Enter Key Values for Method/API:</label>
-              <select class="form-control" [(ngModel)]="selectedAvaConnectorMethodApi" (change)="onSelectAvaConnectorMethodProp()">
+              <select class="form-control" [(ngModel)]="selectedAvaConnectorMethodApi"
+                (change)="onSelectAvaConnectorMethodProp()">
                 <option *ngFor="let avaMethod of selectedAvaConnectorMethod.properties" [ngValue]="avaMethod">
                   {{avaMethod.key}}</option>
               </select>
-              <input type="text" *ngIf="selectedAvaConnectorMethodApi" class="form-control" placeholder="enter {{selectedAvaConnectorMethodApi.key}} value"
-                id="description" [(ngModel)]="selectedAvaConnectorMethodApi.value" name="description" [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }">
+              <input type="text" *ngIf="selectedAvaConnectorMethodApi" class="form-control"
+                placeholder="enter {{selectedAvaConnectorMethodApi.key}} value" id="description"
+                [(ngModel)]="selectedAvaConnectorMethodApi.value" name="description">
             </div>
           </div>
 
           <div class="row">
             <div class="radio mr-sm-4" *ngIf="!selectConnector">
-              <label><input type="radio" name="disableDConnector" [value]="false" [(ngModel)]="disableDConnector">Disable</label>
+              <label><input type="radio" name="disableDConnector" [value]="false"
+                  [(ngModel)]="disableDConnector">Disable</label>
             </div>
             <div class="radio" *ngIf="!selectConnector">
-              <label><input type="radio" name="disableDConnector" [value]="true" [(ngModel)]="disableDConnector">Enable</label>
+              <label><input type="radio" name="disableDConnector" [value]="true"
+                  [(ngModel)]="disableDConnector">Enable</label>
             </div>
           </div>
 
@@ -310,7 +303,8 @@
           <button type="button" class="btn button-close" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
         </div>
         <div class="form-group" *ngIf="!isDisplayDConnector">
-          <button type="button" class="btn button-create" (click)="updateDefaultConnector()">{{ 'update' | i18next }}</button>
+          <button type="button" class="btn button-create"
+            (click)="updateDefaultConnector()">{{ 'update' | i18next }}</button>
           <button type="button" class="btn button-close" (click)="onCloseHandledUpdate()">{{ 'cancel' |
             i18next }}</button>
         </div>
@@ -410,21 +404,16 @@
               <div class="form-group">
                 <label for="sequence_id">{{'sequenceId'| i18next}}</label>
                 <input type="number" class="form-control" placeholder="Enter Sequence Id" id="sequence_id"
-                  formControlName="sequence_id" [(ngModel)]="iMicroFlow.sequence_id" [ngClass]="{ 'is-invalid': submitted && form_control.sequence_id.errors }">
-                <div *ngIf="submitted && form_control.sequence_id.errors" class="invalid-feedback">
-                  <div *ngIf="form_control.sequence_id.errors.required">{{'require_name' | i18next}}</div>
-                </div>
+                  formControlName="sequence_id" [(ngModel)]="iMicroFlow.sequence_id">
               </div>
             </div>
 
             <div class="col-md-6">
               <div class="form-group">
                 <label for="component_name">{{'componentName'|i18next}}</label>
-                <input type="text" class="form-control" placeholder="Enter Component Name" id="component_name" [value]="selectedFlowCmpnt[0]?.component_name"
-                  disabled formControlName="component_name" [(ngModel)]="iMicroFlow.component_name" [ngClass]="{ 'is-invalid': submitted && form_control.component_name.errors }">
-                <div *ngIf="submitted && form_control.component_name.errors" class="invalid-feedback">
-                  <div *ngIf="form_control.component_name.errors.required">{{'require_label' | i18next}}</div>
-                </div>
+                <input type="text" class="form-control" placeholder="Enter Component Name" id="component_name"
+                  [value]="selectedFlowCmpnt[0]?.component_name" disabled formControlName="component_name"
+                  [(ngModel)]="iMicroFlow.component_name">
               </div>
             </div>
           </div>
@@ -434,11 +423,7 @@
               <div class="form-group">
                 <label for="micro_flow_step_name">{{'microFlowName'|i18next}}</label>
                 <textarea class="form-control" rows="1" id="micro_flow_step_name" placeholder="Enter Micro Flow Name"
-                  formControlName="micro_flow_step_name" [(ngModel)]="iMicroFlow.micro_flow_step_name" [ngClass]="{ 'is-invalid': submitted && form_control.micro_flow_step_name.errors }"></textarea>
-                <div *ngIf="submitted && form_control.micro_flow_step_name.errors" class="invalid-feedback">
-                  <div *ngIf="form_control.micro_flow_step_name.errors.required">{{'require_description' | i18next}}
-                  </div>
-                </div>
+                  formControlName="micro_flow_step_name" [(ngModel)]="iMicroFlow.micro_flow_step_name"></textarea>
               </div>
             </div>
           </div>
@@ -451,7 +436,8 @@
         </div>
         <div class="form-group" *ngIf="!isDisplayMicroFlow">
           <button type="button" class="btn button-create" (click)="updateMicroFlow()">{{ 'update' | i18next }}</button>
-          <button type="button" class="btn button-close" (click)="onCloseMFHandledUpdate()">{{ 'cancel' | i18next }}</button>
+          <button type="button" class="btn button-close"
+            (click)="onCloseMFHandledUpdate()">{{ 'cancel' | i18next }}</button>
         </div>
       </div>
     </div>
