--- a/application/clients/desktop/src/app/consentscreen/consentscreen.component.html
+++ b/application/clients/desktop/src/app/consentscreen/consentscreen.component.html
@@ -1,6 +1,6 @@
 <mat-card class="cardsize">
   <mat-card-content class="cardcontent">
-    <mat-checkbox class="example-margin" (change)="openid($event,check)">openid</mat-checkbox>
+    <mat-checkbox class="example-margin" (change)="openid($event)">openid</mat-checkbox>
     <!-- <br>
     <mat-checkbox class="example-margin" (change)="offline($event,check)">offline</mat-checkbox> -->
   </mat-card-content>
