--- a/application/clients/desktop/src/app/flow-manager/flow-manager.component.html
+++ b/application/clients/desktop/src/app/flow-manager/flow-manager.component.html
@@ -8,7 +8,7 @@
   <div class="flowTable">
     <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham" [columnDefs]="columnDefs"
     [rowSelection]="rowSelection" [rowData]="rowData" [animateRows]="true" [defaultColDef]="defaultColDef" domLayout='autoHeight'
-    (cellDoubleClicked)="routeNextPage($event)" (selectionChanged)="onSelectionChanged($event)" (gridReady)="onGridReady($event)">
+    (cellDoubleClicked)="routeNextPage($event)" (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)">
     </ag-grid-angular>
   </div>
 </div>
