--- a/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
+++ b/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
@@ -100,7 +100,7 @@
           <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham"
             [columnDefs]="columnDefs" [rowSelection]="rowSelection" [rowData]="rowData" [animateRows]="true"
             [defaultColDef]="defaultColDef" domLayout='autoHeight' [pagination]="true" [paginationPageSize]="10"
-            [floatingFilter]="true" (selectionChanged)="onSelectionChanged($event)" (gridReady)="onGridReady($event)">
+            [floatingFilter]="true" (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)">
           </ag-grid-angular>
 
           <!-- <form class="m-3" [formGroup]="eventFlows">
