--- a/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
+++ b/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
@@ -91,12 +91,12 @@
       </div>
       <div class="modal-body">
         <div class="container">
-            <div class="row" *ngIf="selectedFlowObj && selectedFlowObj.length > 0">
-                <div class="col-md-6 col-sm-8 col-xs-6">
-                  <b>Seleted Flow Action</b>: &nbsp;&nbsp; {{selectedFlowObj[0].actionOnData}}
-                </div>
-                <br>
-                </div>
+          <div class="row" *ngIf="selectedFlowObj && selectedFlowObj.length > 0">
+            <div class="col-md-6 col-sm-8 col-xs-6">
+              <b>Seleted Flow Action</b>: &nbsp;&nbsp; {{selectedFlowObj[0].actionOnData}}
+            </div>
+            <br>
+          </div>
           <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham"
             [columnDefs]="columnDefs" [rowSelection]="rowSelection" [rowData]="rowData" [animateRows]="true"
             [defaultColDef]="defaultColDef" domLayout='autoHeight' [pagination]="true" [paginationPageSize]="10"
@@ -120,8 +120,7 @@
       </div>
       <div class="modal-footer">
         <div class="form-group">
-          <button type="button" *ngIf="!isGridEvent" class="btn btn-primary button-create" (click)="saveEvent()">ok</button>
-          <button type="button" *ngIf="isGridEvent" class="btn btn-primary button-create" (click)="saveGridEvent()">ok</button>
+          <button type="button" class="btn btn-primary button-create" (click)="saveEvent()">ok</button>
           <button type="button" class="btn btn-danger button-close" (click)="cancelEvent()">cancel</button>
         </div>
       </div>
@@ -165,16 +164,16 @@
 </div>
 
 <!-- Route popup model -->
-<div *ngIf="isRoutePopup" id="routeModal" class="modal" tabindex="-1" role="dialog" style="display: block">
+<div *ngIf="isCustomPopup" id="customModal" class="modal" tabindex="-1" role="dialog" style="display: block">
   <div class="modal-dialog modal-md" role="dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">Routes</h4>
+        <h4 class="modal-title">{{customPopupModal.title}}</h4>
       </div>
       <div class="container">
         <form class="m-3">
           <div class="form-group row">
-            <b for="Screen">Screen</b>
+            <b for="Screen">{{customPopupModal.dropdownLabelName}}</b>
             <select class="form-control" name="screenOptions" [(ngModel)]="routeDetails.screen" id="Screen">
               <option value="" selected>none</option>
               <ng-container *ngFor="let screenObj of screenArrayByProjectId">
@@ -184,20 +183,22 @@
               </ng-container>
             </select>
           </div>
-          <div class="row">
-            <b>Type</b>
+          <div class="row" *ngIf="customPopupModal.typeLabelName">
+            <b>{{customPopupModal.typeLabelName}}</b>
           </div>
-          <div class="row">
-              <label class="radio-inline"><input type="radio" value="none" [(ngModel)]="routeDetails.type" name="routeOption" disabled>None</label>
-              <!-- <label class="radio-inline"><input type="radio" value="pathVariable" [(ngModel)]="routeDetails.type" name="routeOption">Path Variable</label> -->
-              <label class="radio-inline"><input type="radio" value="queryParameter" [(ngModel)]="routeDetails.type" name="routeOption">Query Parameter</label>
-            </div>
+          <div class="row" *ngIf="customPopupModal.typeLabelName">
+            <label class="radio-inline"><input type="radio" value="none" [(ngModel)]="routeDetails.type"
+                name="routeOption" disabled>None</label>
+            <!-- <label class="radio-inline"><input type="radio" value="pathVariable" [(ngModel)]="routeDetails.type" name="routeOption">Path Variable</label> -->
+            <label class="radio-inline"><input type="radio" value="queryParameter" [(ngModel)]="routeDetails.type"
+                name="routeOption">Query Parameter</label>
+          </div>
         </form>
       </div>
       <div class="modal-footer">
         <div class="form-group">
-          <button type="button" class="btn btn-primary button-create" (click)="saveRouteDetails()">ok</button>
-          <button type="button" class="btn btn-danger button-close" (click)="closeRoute()">cancel</button>
+          <button type="button" class="btn btn-primary button-create" (click)="saveCustomPopupInfo(customPopupModal.name)">ok</button>
+          <button type="button" class="btn btn-danger button-close" (click)="closeCustomPopup()">cancel</button>
         </div>
       </div>
     </div>
