project feature flows creation done

--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -202,7 +202,7 @@
       </div>
       <div class="modal-footer">
         <div class="form-group">
-          <button type="button" class="btn btn-primary" (click)="projectflow('add')">Save</button>
+          <button type="button" class="btn btn-primary" (click)="createProjectFlow()">Save</button>
           <button type="button" class="btn btn-danger" (click)="closeFeatureFlowModal()">cancel</button>
         </div>
       </div>
