Added warning modal popup for the generated app

--- a/generator/services/seed/home/home.component.html
+++ b/generator/services/seed/home/home.component.html
@@ -1,5 +1,5 @@
-<div>
-  <span>
-    Welcome Home!!!
+<div class="flex-container">
+  <span class="welcome">
+    Welcome to Geppetto Generated Application Home!!!
   </span>
 </div>
