adding i18next pipes in seed files

--- a/generator/services/seed/home/home.component.html
+++ b/generator/services/seed/home/home.component.html
@@ -1,5 +1,3 @@
 <div class="flex-container">
-  <span class="welcome">
-    Welcome to Geppetto Generated Application Home!!!
-  </span>
+  <span class="welcome">{{'source.welcomeHome' | i18next}}</span>
 </div>
