--- a/generator/services/seed/admin/admin.component.html
+++ b/generator/services/seed/admin/admin.component.html
@@ -1,10 +1,10 @@
 <div class="dashboardcard">
   <div class="card">
     <div class="card-header">
-      Dashboard
+      {{'source.dashboard' | i18next}}
     </div>
     <div class="card-body">
-      <a routerLink="/usermanagement" class="btn btn-primary">User Management</a>
+      <a routerLink="/usermanagement" class="btn btn-primary">{{'source.userManagement' | i18next}}</a>
     </div>
   </div>
 </div>
