--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -408,7 +408,8 @@
                 </mat-radio-group>
                 <span>
                   <mat-radio-group layout="row">
-                    <mat-radio-button class="example-radio-button" value="frontEnd" (click)="frontEndService('frontEnd')">
+                    <mat-radio-button class="example-radio-button" value="frontEnd"
+                      (click)="frontEndService('frontEnd')">
                       FrontEnd service
                     </mat-radio-button>
                   </mat-radio-group>
@@ -424,18 +425,22 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-4">
-                  <button type="button" class="btn button-create ok_btn" id="AddConnector" (click)="onSubmit()">Quick
-                    connectors</button>
-                </div>
-                <div class="col-md-4" style="right:15%">
+                <mat-radio-group aria-label="Select an option">
+                  <mat-radio-button value="1" (click)="onSubmit()">Quick connectors</mat-radio-button>
+                  <mat-radio-button value="2"> Default Connector</mat-radio-button>
+                  <mat-radio-button value="3"> Custom Connector</mat-radio-button>
+                </mat-radio-group>
+
+                <!-- <button type="button" class="btn button-create ok_btn" id="AddConnector" (click)="onSubmit()">Quick
+                    connectors</button> -->
+                <!-- <div class="col-md-4" style="right:15%">
                   <button type="button" style="background-color: #033668;" class="btn button-create ok_btn"
                     id="update">Default Connector</button>
-                </div>
-                <div class="col-md-4" style="right:29%">
+                </div> -->
+                <!-- <div class="col-md-4" style="right:29%">
                   <button type="button" style="background-color: #033668;" class="btn button-create ok_btn"
                     id="update">Custom Connector</button>
-                </div>
+                </div> -->
               </div>
             </form>
           </div>
