--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -221,7 +221,7 @@
         <p>Please click confirm to delete this project ? </p>
       </div>
       <div class="modal-footer" style="padding: 5px">
-        <button type="button" class="btn btn-default" (click)="deleteEntity()">Confirm</button>
+        <button type="button" class="btn btn-default" (click)="deleteEntityById()">Confirm</button>
         &nbsp;
         <button type="button" class="btn btn-default" (click)="closeDeleteModel()">Cancel</button>
       </div>
@@ -241,7 +241,7 @@
         <p>Please click confirm to delete this screen ? </p>
       </div>
       <div class="modal-footer" style="padding: 5px">
-        <button type="button" class="btn btn-default" (click)="deleteScreenPopup()">Confirm</button>
+        <button type="button" class="btn btn-default" (click)="deleteScreenByIdPopup()">Confirm</button>
         &nbsp;
         <button type="button" class="btn btn-default" (click)="closedeleteScreenPopup()">Cancel</button>
       </div>
